k8s/overlays/prod/meeting-wait-user-schema-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeting-api-deployment
  namespace: audiomind
spec:
  template:
    spec:
